docroot/themes/custom/cleco/src/scss/components/_header.scss
/**
 * GENERAL
 */
 .mobile-menu-opened {
  overflow: hidden;
 }

.masthead {
  z-index: 10;
  position: relative;
  background: $color-white;
}

.toggle {
  width: 1.875rem;
  height: auto;
  float: right;
  display: none;
  cursor: pointer;
  margin: 0 0 0 0.9375rem;
  position: relative;

  @media only screen and (max-width: $media-screen-medium) {
    display: block;
  }

  span {
    width: 100%;
    height: 0.1875rem;
    display: block;
    border-radius: 0.125rem;
    text-indent: -9999px;
    background: $color-red;
    transform: translateY(-50%);
    transition: all 0.3s ease;
    position: absolute;
    top: 50%;
    left: 0;

    &:before,
    &:after {
      width: 100%;
      height: 0.1875rem;
      content: '';
      display: block;
      border-radius: 0.125rem;
      background: $color-red;
      transition: all 0.3s ease;
      position: absolute;
      left: 0;
    }

    &:before {
      top: -10px;
    }

    &:after {
      bottom: -10px;
    }
  }

  &:hover {
    box-shadow: none;
  }

  &.is-active {
    box-shadow: none;

    span {
      background: none;

      &:before {
        top: 0;
        transform: rotate(45deg);
        background: $color-orange;
      }

      &:after {
        bottom: 0;
        transform: rotate(-45deg);
        background: $color-orange;
      }
    }
  }
}

@media (max-width: 700px) {
  .masthead-utility {
    font-size: 0.875em;
  }
}


/**
 * LOGO
 */
.logo {
  @include link-reset;
  display: inline-block;
  width: 6.625rem;
  height: 1.5rem;

  &::before {
    content: " ";
    position: absolute;
    top: 0;
    left: -23px;
    width: 23%;
    height: 72px;
    margin-left: 20px;
    background-color: $color-orange;
    z-index: -1;
  }

  @media only screen and (max-width: $media-screen-medium) {
    &::before {
      width: 27%;
    }
  }

  @media only screen and (max-width: $breakpoint-type) {
    &::before {
      height: 64px;
    }
  }

  @media only screen and (max-width: $media-screen-mobile) {
    width: 100px;

    &::before {
      width: 35%;
      height: 60px;
      top: -4px;
    }
  }

  svg {
    width: 100%;
    height: 100%;

    g {
      fill: $color-off-black;
    }
  }

  @media (min-width: 800px) {
    width: 8.8125rem;
    height: 2rem;
  }
}

/**
 * LAYOUT
 */
.masthead-primary,
.masthead-utility {
  position: relative;
  display: flex;
  justify-content: space-between;
  @include section-padding(horizontal);
}

.masthead-utility {
  flex-wrap: wrap;
}

/**
 * BRANDING
 */
.masthead-branding {
  display: flex;
  align-items: center;
  padding-top: 1em;
  padding-bottom: 1em;
  @include property-scale(margin-right, $container-padding-map);

  @media (min-width: $breakpoint-nav-inline) {
    padding-top: 1.25em;
    padding-bottom: 1.25em;
  }
}

/**
 * SEARCH FORM
 */
.masthead-search {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  @include property-scale(margin-left, map-multiplier($container-padding-map, 0.5));

  @media only screen and (max-width: $media-screen-medium) {
    margin: 0 0 0 auto;
  }
}

.masthead-search-form {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.masthead-search-form-input {
  width: 100%;

  &::-ms-clear {
    display: none;
  }
}

.masthead-search-form-submit {
  display: none;
}

/**
 * SEARCH TOGGLES
 */
.masthead-search-toggle {
  padding: 1em;
  margin-right: -1em;
  transition: 200ms ease;

  .dropdown-toggle-label {
    display: none;
  }
}

.masthead-primary {
  &.is-searching .masthead-search-toggle--open,
  &:not(.is-searching) .masthead-search-toggle--close {
    position: absolute;
    opacity: 0;
    transform: scale(0.5);
  }
}

  .masthead-search-form {
    flex-grow: 1;
  }

  .masthead-search-form-input {
    box-shadow: inset 0 -1px 0 $input-border-color;
    font-size: 1.5em;

    &[type='search'] {
      background-position: 0.5rem center;
      padding-left: 2.5rem;
    }

    &:focus {
      box-shadow: inset 0 -1px 0 $color-orange;
    }
  }

  .masthead-primary {
    &:not(.is-searching) {
      .masthead-search-form {
        max-width: 0;
        overflow: hidden;
        transform: translateX(2rem);
      }

      div[class*='masthead-navigation'] {
        transition: 300ms ease;
      }
    }

    &.is-searching {
      div[class*='masthead-navigation'] {
        position: absolute;
        transform: translateX(-2rem);
        opacity: 0;
      }

      a[class*='toggle'] {
        position: absolute;
        transform: translateX(-2rem);
        opacity: 0;
      }
    }
  }
// }

/**
 * UTILITY
 */
.masthead-utility {
  border-bottom: 0.0625rem solid rgba($color-gray-light, 0.43);
  background-color: $color-off-black;

  @media only screen and (max-width: $media-screen-mobile) {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }
}

/**
 * LANGUAGE SELECTOR
 */
.masthead-language {
  display: flex;

  @media only screen and (max-width: $media-screen-mobile) {
    width: 100%;
    padding-bottom: 0.3125rem;
  }
}
/**
* NAV HEADER UTILS
*/
.nav--header-utils {
  @media only screen and (max-width: $media-screen-mobile) {
    width: 100%;
  }
}

/**
 * LAYOUT: STACKED
 */
@media (max-width: ($breakpoint-nav-inline - 1)) {
  .masthead-primary {
    // flex-flow: row wrap;

    div[class*='masthead-navigation'] {
      width: 100%;
      // order: 3;
    }
  }

  .masthead-utility {
    margin-bottom: 0.25em;
  }
}

@media (min-width: $breakpoint-nav-inline) {
  .masthead-primary {
    div[class*='masthead-navigation'] {
      flex-grow: 1;
      justify-content: flex-end;
    }
  }
}

.masthead-navigation {
  width: 100%;

  @media only screen and (max-width: $media-screen-medium) {
    left: 0;
    top: 100%;
    width: 100%;
    display: none;
    overflow-y: scroll;
    position: absolute;
    height: calc(100vh - 1.25rem);
    background-color: $color-white;
    @include section-padding(horizontal);
  }

  nav {
    height: 100%;
    @media only screen and (max-width: $media-screen-medium) {
      margin: 0;
      padding: 0;
      width: 100%;
      flex-wrap: wrap;
    }

    ul {
      &.nav-menu--depth-0 {
        @media only screen and (max-width: $media-screen-medium) {
          margin: 0;
          padding: 0;
          display: block !important;
        }

        li {
          &.nav-item--depth-0 {
            @media only screen and (max-width: $media-screen-medium) {
              margin: 0;
              padding: 0;
              width: 100%;
              max-width: 100%;
              flex-wrap: wrap;
            }

            a {
              text-align: left;
              line-height: 1.5;

              &.nav-link--depth-0 {
                @media only screen and (max-width: $media-screen-medium) {
                  margin: 0;
                  padding: 0.75rem 0;
                  overflow: visible;
                }

                &:after {
                  @media only screen and (max-width: $media-screen-medium) {
                    display: none;
                  }
                }
              }
            }
          }

          &.menu-item--has-children {
            @media only screen and (max-width: $media-screen-medium) {
              position: relative;
              padding-right: 60px;
            }

            .arrow {
              top: 0;
              width: 30px;
              height: 100%;
              display: none;
              position: absolute;
              left: calc(57% - 35px);
              transform: translate(-57%, 0%);
              @media only screen and(max-width: $media-screen-medium) {
                display: block;
              }

              &:after {
                @media only screen and (max-width: $media-screen-medium) {
                  opacity: 1;
                  top: 17.5px;
                  content: "";
                  width: 0.625rem;
                  height: 0.625rem;
                  position: absolute;
                  display: block !important;
                  left: calc(50% - 0.625rem);
                  background-color: transparent;
                  border-top: 0.125rem solid $color-off-black;
                  border-left: 0.125rem solid $color-off-black;
                  transform: rotate(135deg) translate(-50%, -50%);
                }
              }

              &.opened,
              &.is-active {
                &:after {
                  @media only screen and (max-width: $media-screen-medium) {
                    border-top-color: $color-red;
                    border-left-color: $color-red;
                  }
                }
              }
            }

            &.opened,
            &.is-active {
              .arrow {
                &:after {
                  @media only screen and (max-width: $media-screen-medium) {
                    top: 7.5px;
                    transform: rotate(220deg)translate(-50%, -50%);
                  }
                }
              }
            }
          }

          a {
            &.is-active {
              @media only screen and (max-width: $media-screen-medium) {
                color: $color-red;
              }
            }
          }

          > ul {
            &.nav-menu--depth-1 {
              @media only screen and (max-width: $media-screen-medium) {
                margin: 0;
                border: 0;
                padding: 0;
                width: 100%;
                display: block;
                max-width: 100%;
                position: static;
                box-shadow: none;
                overflow: visible;
              }

              li {
                &.nav-item--depth-1 {
                  @media only screen and (max-width: $media-screen-medium) {
                    padding: 0;
                    margin: 0;
                    width: 100%;
                    max-width: 100%;
                    border-left: 0;
                  }
                }
              }
            }
          }
        }
      }
    }
  }

  &.is-active {
    display: block;
  }
}

